--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ style='mso-ansi-language:EN-US'>PhD Student, Theoretical Physics<o:p></o:p></spa
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
 style='mso-ansi-language:EN-US'>The University of Auckland<o:p></o:p></span></p>
 
-<a href='https://fwphys.com' align=center style='text-align:center'>FWPhys.com</a>	
+  <p><a href='https://fwphys.com' align=center style='text-align:center'>FWPhys.com</a>	</p>
 </div>
 
 </body>
