--- a/index.html
+++ b/index.html
@@ -1,28 +1,4 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
-xmlns:w="urn:schemas-microsoft-com:office:word"
-xmlns:m="http://schemas.microsoft.com/office/2004/12/omml"
-xmlns="http://www.w3.org/TR/REC-html40">
-
-<body lang=EN>
-
-<div>
-
-<p align=center style='text-align:center'><span class=SpellE><span
-lang=EN-US style='mso-ansi-language:EN-US'>Yourong</span></span><span
-lang=EN-US style='mso-ansi-language:EN-US'> Frank Wang<o:p></o:p></span></p>
-
-<p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='mso-ansi-language:EN-US'><o:p>&nbsp;</o:p></span></p>
-
-<p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='mso-ansi-language:EN-US'>PhD Student, Theoretical Physics<o:p></o:p></span></p>
-
-<p class=MsoNormal align=center style='text-align:center'><span lang=EN-US
-style='mso-ansi-language:EN-US'>The University of Auckland<o:p></o:p></span></p>
-
-<p align=center style='text-align:center'><a href='https://fwphys.com/'>FWPhys.com</a></p>
-</div>
-
-</body>
+<html></html>
+<meta http-equiv="refresh" content="0; URL='https://fwphys.com'" />
 
 </html>
